# chan6

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
apps/chan6_app/: README.md  pubspec.yaml
apps/chan6_app/lib/: main.dart
apps/chan6_app/test/: widget_test.dart
apps/chan6_app/windows/: CMakeLists.txt
crates/chan6_cli/: Cargo.toml
crates/chan6_cli/src/: main.rs
crates/chan6_cli/tests/: query_chan_basic_contract.rs
crates/chan6_core/: Cargo.toml
crates/chan6_core/src/: chan_basic.rs  csv_reader.rs  lib.rs  model.rs  processor.rs  session.rs  storage.rs  tdx_reader.rs  text_reader.rs
crates/chan6_core/tests/: bsp_follow_options.rs  chanpy_stage1_bi_endpoint_pullback.rs  chanpy_stage1_bi_endpoint_update.rs  chanpy_stage1_bi_endpoint_update_up.rs  chanpy_stage1_bi_endpoint_weaker_same_kind.rs  chanpy_stage1_bi_endpoint_weaker_top.rs  chanpy_stage1_bi_same_kind.rs  chanpy_stage1_bi_three_link.rs  chanpy_stage1_check_fx_valid.rs  chanpy_stage1_seg_zs.rs  chanpy_stage1_segment_even.rs  (+14 more)
docs/: chan_hichan_reference_map.md  chan_implementation_standard.md  chan_py_gold_comparison_policy.md  chan_py_rust_stage1_audit.md  chan_py_source_mapping.md  chan_py_stage1_rule_audit.md  chan_py_strict_alignment.md  query_chan_basic_contract.md
docs/chanpy_source_map/: bsp_t1p.md  bsp_t1p_fixture.md  bsp_t3.md  bsp_t3a_fixture.md  bsp_t3b_fixture.md
examples/: sample_ticks.csv
fixtures/chanpy_stage1/: README.md
tools/: extract_hichan_stage1_snippets.py  generate_chanpy_stage1_gold.py  render_chan_basic_html.py  scan_hichan_chanpy_sources.py
(+99 files in other folders)
